SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_RDS_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AWS Accounts</label>
        <referenceTo>AWS_Accounts__c</referenceTo>
        <relationshipLabel>Ocean RDS Requests</relationshipLabel>
        <relationshipName>Ocean_RDS_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AWS_Availability_Zone__c</fullName>
        <label>Availability Zone</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Availability_Zone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Engine_License__c</fullName>
        <label>DB Engine &amp; License</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_RDS_DB_Engine_License</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <label>Deployment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_RDS_Deployment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_RDS_Funding_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstanceType__c</fullName>
        <label>Instance Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_RDS_DB_Instace_Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instance_Quantity__c</fullName>
        <label>Instance Quantity</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OCEAN_REQUEST</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Ocean RDS Requests</relationshipLabel>
        <relationshipName>Ocean_RDS_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Instance_Uptime_DaysMonth__c</fullName>
        <label>Per Instance Uptime (Days/Month)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Instance_Uptime_HoursDay__c</fullName>
        <label>Per Instance Uptime (Hours/Day)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioned_IOPS__c</fullName>
        <label>Provisioned IOPS</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDS_Request_Id__c</fullName>
        <displayFormat>OCEAN-RDS-{00000}</displayFormat>
        <label>RDS Request Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Resource_Request_ID__c</fullName>
        <displayFormat>RDS-{00000}</displayFormat>
        <label>Resource Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Size_GB__c</fullName>
        <label>Storage Size (GB)</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Type__c</fullName>
        <label>Storage Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_RDS_Storage_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wave_Submitted__c</fullName>
        <label>Wave Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ocean RDS Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Application__c</columns>
        <columns>Wave_Submitted__c</columns>
        <columns>CSP_Option_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Ocean RDS Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean RDS Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>